delete index.html fix server using express and socket.io
Signed-off-by: Lee <jessy1092@gmail.com>

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 html
   head
     meta(charset='utf-8')
-    title Chat room
+    title#title
     script(src='/socket.io/socket.io.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/js/run.js')
