--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ html
     meta(charset='utf-8')
     title#title
     script(src='/socket.io/socket.io.js')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/js/run.js')
   body
     #container
@@ -14,5 +14,4 @@ html
           section#output
           section#send
             input#data(type='text', size='100')
-            br
             input#sendText(type='button', value='Send Text')
